--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 data/versioning/*
-!logs/.gitkeeps
+!data/versioning/.gitkeeps
 data/tmp/0_missions_texts/
 data/tmp/1_missions_contribs/
 data/tmp/0_labdocs_texts_init.json.gz
