tracking versionning empty 3

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 data/versioning/*
 !data/versioning/.gitkeeps
+!versioning/.gitkeeps
 data/tmp/0_missions_texts/
 data/tmp/1_missions_contribs/
 data/tmp/0_labdocs_texts_init.json.gz
