--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 data/versioning/*
-!data/versioning/.gitkeeps
-!versioning/.gitkeeps
 data/tmp/0_missions_texts/
 data/tmp/1_missions_contribs/
 data/tmp/0_labdocs_texts_init.json.gz
 data/tmp/2_collab.json
 data/tmp/2_collab.json.gz
-.DS_Storetout
+.DS_Store
