--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 data/versioning/*
 !data/versioning/.gitkeep 
-data/tmp/*
-!data/tmp/.gitkeep 
-
-
+data/tmp/0_missions_texts/
+data/tmp/1_missions_contribs/
+data/tmp/0_labdocs_texts_init.json.gz
+data/tmp/2_collab.json
+data/tmp/2_collab.json.gz
+data/tmp/2_semmantic.json
 .DS_Store
 .*
-dfdf
